--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,9 @@
     <title>Paean</title>
     <meta name="author" content="dtysky">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/benchmark/2.1.4/benchmark.min.js"></script>
   </head>
   <body>
     <div id="container">
