--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Paean</title>
+    <title>gl-matrix-wasm</title>
     <meta name="author" content="dtysky">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -13,5 +13,5 @@
   <body>
     <div id="container">
     </div>
-  </body>
+  <script type="text/javascript" src="./react-packet.eed5d65462bf15b1f5b3.js"></script><script type="text/javascript" src="./main.eed5d65462bf15b1f5b3.js"></script></body>
 </html>
